--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 xcode_workspace: Example/GDataXML-HTML.xcworkspace
-xcode_scheme: GDataXML-HTMLTests
+xcode_scheme: GDataXML-HTML
