--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
-xcode_workspace: Example/GDataXML-HTML.xcworkspace
-xcode_scheme: GDataXML-HTMLTests
+osx_image: xcode7
+script:
+  - xcodebuild -workspace Example/GDataXML-HTML.xcworkspace -scheme GDataXML-HTML test -sdk iphonesimulator
