--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 osx_image: xcode7
 script:
-  - xcodebuild -workspace Example/GDataXML-HTML.xcworkspace -scheme GDataXML-HTML test -sdk iphonesimulator
+  - cd Example && pod install &&  xcodebuild -workspace Example/GDataXML-HTML.xcworkspace -scheme GDataXML-HTML test -sdk iphonesimulator
