Disable xcpretty as travis for some reason doesn't show all the output

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
   - sudo gem install xcpretty
 script:
   - pod install
-  - xcodebuild -workspace GDataXML-HTML.xcworkspace -scheme GDataXML-HTML build -sdk iphonesimulator | xcpretty -c && exit ${PIPESTATUS[0]}
-  - xcodebuild -workspace GDataXML-HTML.xcworkspace -scheme GDataXML-HTML test -sdk iphonesimulator | xcpretty -c && exit ${PIPESTATUS[0]}
+  - xcodebuild -workspace GDataXML-HTML.xcworkspace -scheme GDataXML-HTML build -sdk iphonesimulator
+  - xcodebuild -workspace GDataXML-HTML.xcworkspace -scheme GDataXML-HTML test -sdk iphonesimulator
